--- a/videos.html
+++ b/videos.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -59,13 +59,29 @@
                 Watch my video presentation on how statistics serve as the foundation for rational, evidence-based decision-making.
             </p>
 
-            <div class="max-w-4xl mx-auto text-center bg-yellow-50 p-4 md:p-10 rounded-2xl border border-yellow-200">
-                <div class="relative" style="padding-bottom: 56.25%; height: 0; overflow: hidden;">
-                    <video controls class="absolute top-0 left-0 w-full h-full rounded-lg shadow-xl" poster="optional_thumbnail.jpg">
+            <div class="max-w-4xl mx-auto text-center bg-yellow-50 p-4 md:p-10 rounded-2xl border border-yellow-200 shadow-sm">
+                <div class="relative mb-8" style="padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                    <!-- Updated video poster to 1.img -->
+                    <video controls class="absolute top-0 left-0 w-full h-full rounded-lg shadow-xl" poster="1.img">
                         <source src="videos.mp4" type="video/mp4">
-                        Your browser does not support the video tag. Please download the video
-                        <a href="videos.mp4" class="text-yellow-600 underline">here</a>.
+                        Your browser does not support the video tag.
                     </video>
+                </div>
+
+                <!-- Large Fallback Button with Stars on both sides -->
+                <div class="mt-4 pt-6 border-t border-yellow-200">
+                    <p class="text-yellow-800 font-medium mb-6">
+                        Can't play the video above?
+                    </p>
+                    <a href="https://www.youtube.com/watch?v=ceqECKSG7fQ" target="_blank" class="inline-flex items-center justify-center gap-4 py-5 px-12 bg-yellow-400 text-yellow-900 text-xl font-black rounded-full shadow-lg hover:bg-yellow-500 transition duration-300 ease-in-out transform hover:scale-110 active:scale-95">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8">
+                            <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+                        </svg>
+                        WATCH ON YOUTUBE
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8">
+                            <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+                        </svg>
+                    </a>
                 </div>
             </div>
 
